# NeoPaquet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  License.md  Makefile  README.md  ROADMAP.md  SECURITY.md  hello.np  neo  paquet.toml  pyproject.toml  setup.py
.github/workflows/: auto-merge.yml  build.yml  ci.yml  python-publish.yml  release.yml
docs/: 3d_game_tutorial.md  advanced_game_tutorial.md  architecture.md  cheatsheet.md  contributor_guide.md  dev_internals.md  editor_design.md  engine_design.md  game_tutorial.md  graphics_tutorial.md  guide.md  internals_diagrams.md  roadmap.md  spec.md  tutorial.md
docs/examples/: README.md  base12_math.np  error_handling.np  factorial.np  fibonacci.np  hello_world.np  interop_c.np  loop_test.np  matrix_mult.np
examples/: hello_world.np  needs_fixing.np  simple.np  structs.np
neopaquet/: irgen.py  lexer.py  main.py
npaquetc/: ast.py  nasmgen.py  parser.py
src/: compiler.py  dev_tools.py  error_checker.py  lexer.py  parser.py
stdlib/: core.np  graphics.np  io.np  linear_algebra.np  math.np
tests/: test_compiler.py
